# logfetcher

./: Cargo.toml  README.md  flake.nix
src/: lab.rs  main.rs
