[package]
name = "logfetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quickcfg = { git = "https://github.com/micmine/quickcfg"}
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "4.5.2", features = ["derive"] }
git2 = "0.18.2"
